--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "konva": "^7.2.5",
+    "lodash": "^4.17.21",
+    "vue": "^2.6.10",
+    "vue-konva": "^2.1.7",
+    "vue-lodash": "^2.1.2",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
@@ -18,7 +23,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "^2.2.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -42,5 +51,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "main": "index.js",
+  "author": "zoechen <iki0723@gmail.com>",
+  "license": "MIT"
 }
